--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,14 +1,15 @@
 name: Deploy
 
-on:
-    push:
-        branches: [ "master" ]
-
-    workflow_dispatch:
+on: [push, workflow_dispatch]
 
 jobs:
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
         - uses: actions/checkout@v2
 
